--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -646,7 +646,7 @@ aside:
       link: https://github.com/
   card_announcement:
     enable: true
-    content: 投稿请发送至我的邮箱
+    content: 本博客即将迁移，请留意 | 投稿请发送至我的邮箱
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
