modified:   _config.yml 	modified:   package-lock.json 	modified:   package.json 	modified:   source/_posts/bt.md

--- a/_config.yml
+++ b/_config.yml
@@ -114,3 +114,8 @@ search:
   path: search.json
   field: post
   content: true
+
+sitemap: #站点地图
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
