--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -37,7 +37,7 @@ copy:
 #   icon: link || the description
 social:
   fab fa-github: https://github.com/wutao-xuemei || Github
-  fas fa-envelope: mailto:laozheng@laozheng.cf || Email
+  fas fa-envelope: mailto:laozheng@duck.com || Email
 
 # search (搜索)
 # see https://butterfly.js.org/posts/ceeb73f/#搜索系統
@@ -91,14 +91,14 @@ disable_top_img: false
 index_img: http://img.xjh.me/random_img.php?type=bg&ctype=acg&return=302
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: /img/bg.png
+default_top_img: /img/bg.webp
 
 # The banner image of archive page
-archive_img: /img/bg.png
+archive_img: /img/bg.webp
 
 # If the banner of tag page not setting, it will show the top_img
 # note: tag page, not tags page (子標籤頁面的 top_img)
-tag_img: /img/bg.png
+tag_img: /img/bg.webp
 
 # The banner image of tag page
 # format:
@@ -621,7 +621,7 @@ subtitle:
     - 好累啊，今天也摸鱼吧。
 
 # Loading Animation (加載動畫)
-preloader: false
+preloader: true
 
 # aside (側邊欄)
 # --------------------------------------
@@ -644,9 +644,9 @@ aside:
       icon: fab fa-github
       text: Follow Me
       link: https://github.com/
-  card_announcement:
+  card_announcement: # 公告
     enable: true
-    content: 本博客即将迁移，请留意 | 投稿请发送至我的邮箱
+    content: 投稿请发送至我的邮箱
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -753,7 +753,7 @@ fancybox: true
 # mermaid
 # see https://github.com/mermaid-js/mermaid
 mermaid:
-  enable: false
+  enable: true
   # built-in themes: default/forest/dark/neutral
   theme:
     light: default
@@ -806,7 +806,7 @@ snackbar:
 
 # https://instant.page/
 # prefetch (預加載)
-instantpage: false
+instantpage: true
 
 # https://github.com/vinta/pangu.js
 # Insert a space between Chinese character and English character (中英文之間添加空格)
@@ -817,9 +817,9 @@ pangu:
 # Lazyload (圖片懶加載)
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: false
+  enable: true
   field: site # site/post
-  placeholder:
+  placeholder: /img/friend_404.gif
   blur: false
 
 # PWA
