--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,24 @@ timezone: 'Asia/Hong_Kong'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://blog.laozheng.cf
-permalink: :year/:month/:day/:title/
-permalink_defaults:
-pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: true # Set to false to remove trailing '.html' from permalinks
+url: https://blog.laozheng.cf
+root: /
+permalink: posts/:abbrlink/
+
+# abbrlink config 依赖安装：https://github.com/rozbo/hexo-abbrlink
+abbrlink:
+  alg: crc32 #support crc16(default) and crc32
+  rep: dec #support dec(default) and hex
+  drafts: false #(true)Process draft,(false)Do not process draft. false(default)
+  # Generate categories from directory-tree
+  # depth: the max_depth of directory-tree you want to generate, should > 0
+  auto_category:
+    enable: false #true(default)
+    depth: #3(default)
+    over_write: false
+  auto_title: false #enable auto title, it can auto fill the title by path
+  auto_date: false #enable auto date, it can auto fill the date by time today
+  force: false #enable force mode,in this mode, the plugin will ignore the cache, and calc the abbrlink for every post even it already had abbrlink.
 
 # Directory
 source_dir: source
@@ -45,7 +57,7 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: false
+  line_number: true
   auto_detect: false
   tab_replace: ''
   wrap: true
@@ -53,7 +65,7 @@ highlight:
 prismjs:
   enable: false
   preprocess: true
-  line_number: false
+  line_number: true
   tab_replace: ''
 
 # Home page setting
@@ -117,5 +129,6 @@ search:
 
 sitemap: #站点地图
   path: sitemap.xml
-baidusitemap:
-  path: baidusitemap.xml
+  rel: false
+  tags: true
+  categories: true
