--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -12,7 +12,7 @@ menu:
   #   Music: /music/ || fas fa-music
   #   Movie: /movies/ || fas fa-video
   # Link: /link/ || fas fa-link
-  # About: /about/ || fas fa-heart
+  关于我: /about/ || fas fa-heart
 
 # Code Blocks (代碼相關)
 # --------------------------------------
