modified:   _config.butterfly.yml 	modified:   _config.yml 	new file:   source/_posts/fanqiang.md 	modified:   "source/_posts/\346\237\245\346\260\264\350\241\250\346\214\207\345\215\227.md" 	modified:   source/about/index.md 	new file:   source/img/fq.webp 	new file:   source/img/fq1.webp 	new file:   source/img/fq10.webp 	new file:   source/img/fq11.webp 	new file:   source/img/fq12.webp 	new file:   source/img/fq13.webp 	new file:   source/img/fq14.png 	new file:   source/img/fq15.webp 	new file:   source/img/fq2.webp 	new file:   source/img/fq3.webp 	new file:   source/img/fq4.webp 	new file:   source/img/fq5.webp 	new file:   source/img/fq6.webp 	new file:   source/img/fq7.webp 	new file:   source/img/fq8.webp 	new file:   source/img/fq9.webp 	new file:   source/img/fq_bg.webp

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 躺平的blog
 subtitle: 遇到困难摆大烂
 description: 遇到困难摆大烂
 keywords:
-author: 吴涛学妹
+author: 吴涛
 language: zh-CN
 timezone: 'Asia/Hong_Kong'
 
