modified:   _config.butterfly.yml 	new file:   source/_posts/blog.md 	modified:   "source/_posts/\345\260\206Hexo\345\215\232\345\256\242\351\203\250\347\275\262\345\210\260Cloudflare\345\271\266\350\256\276\347\275\256\350\207\252\345\256\232\344\271\211\345\237\237.md" 	new file:   source/img/blog.webp 	new file:   source/img/blog1.webp 	new file:   source/img/blog_bg.webp

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -92,14 +92,14 @@ disable_top_img: false
 index_img: rgb(255,255,255,0)
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: /img/bg.webp
+default_top_img: rgb(255,255,255,0)
 
 # The banner image of archive page
-archive_img: /img/bg.webp
+archive_img: rgb(255,255,255,0)
 
 # If the banner of tag page not setting, it will show the top_img
 # note: tag page, not tags page (子標籤頁面的 top_img)
-tag_img: /img/bg.webp
+tag_img: rgb(255,255,255,0)
 
 # The banner image of tag page
 # format:
