modified:   _config.butterfly.yml 	modified:   _config.yml 	new file:   source/_posts/gfw.md 	modified:   source/img/fq14.png 	new file:   source/img/gfw.png 	new file:   source/img/gfw1.png 	new file:   source/img/gfw2.png 	new file:   source/img/gfw3.png 	new file:   source/img/gfw4.jpg 	new file:   source/img/gfw_bg.webp

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -38,7 +38,7 @@ copy:
 social:
   fab fa-github: https://github.com/wutao-xuemei || Github
   fas fa-envelope: mailto:laozheng@duck.com || Email
-  fab fa-telegram: t.me/lao_zheng_bot || Telegram
+  fab fa-telegram: https://t.me/lao_zheng_bot || Telegram
 
 # search (搜索)
 # see https://butterfly.js.org/posts/ceeb73f/#搜索系統
